# Projects

bank_marketing_profit_catboost/: .gitignore
bank_marketing_profit_catboost/bank_marketing_profit_catboost/: .gitignore  README.md  requirements.txt
bank_marketing_profit_catboost/bank_marketing_profit_catboost/notebooks/: README.md
bank_marketing_profit_catboost/bank_marketing_profit_catboost/scripts/: run_experiment.py
bank_marketing_profit_catboost/bank_marketing_profit_catboost/src/: data.py  features.py  metrics.py  model.py  plots.py  utils.py
house-prices-leakage-free/: .gitignore  README.md  README_ko.md  pyproject.toml  requirements.txt
house-prices-leakage-free/notebooks/: house_prices_kaggle_leakage_free.ipynb
house-prices-leakage-free/scripts/: predict.py  train.py
house-prices-leakage-free/src/house_prices/: config.py  data.py  ensemble.py  models.py  preprocess.py  utils.py
retroviral-wall-challenge-submission/: .gitignore  README.md  REPO_CONTENTS.txt  phase2_extraction_note.md  retroviral_wall_challenge_final.ipynb
triagegeist-hidden-high-risk/: .gitignore  README.md  requirements.txt
triagegeist-hidden-high-risk/data/: README.md
triagegeist-hidden-high-risk/docs/: project_writeup.md
triagegeist-hidden-high-risk/notebooks/: triagegeist_hidden_high_risk.ipynb
triagegeist-hidden-high-risk/results/: README.md
