[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-prices-leakage-free"
version = "0.1.0"
description = "Leakage-aware stacking pipeline for Kaggle House Prices"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
